tests-build/tests/fail/macros_main_generics.stderr
error[E0658]: default values for const generic parameters are experimental
 --> tests/fail/macros_main_generics.rs:6:53
  |
6 | async fn where_clause_const_generics<const T: usize = {1 + 1}>() {
  |                                                     ^^^^^^^^^
  |
  = note: see issue #44580 <https://github.com/rust-lang/rust/issues/44580> for more information

error: defaults for const parameters are only allowed in `struct`, `enum`, `type`, or `trait` definitions
 --> tests/fail/macros_main_generics.rs:6:44
  |
6 | async fn where_clause_const_generics<const T: usize = {1 + 1}>() {
  |                                            ^
